# eth-trading-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  client_example.py  test_mcp.sh
src/: main.rs  mcp.rs  types.rs
src/ethereum/: balance.rs  client.rs  mod.rs  price.rs  swap.rs
src/tools/: get_balance.rs  get_token_price.rs  mod.rs  swap_tokens.rs
tests/: integration_test.rs
