[package]
name = "eth-trading-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Ethereum clients
ethers = { version = "2.0", features = ["abigen", "ws"] }

# MCP and JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Decimal precision for financial calculations
rust_decimal = "1.36"

# Async utilities
async-trait = "0.1"

# Environment variables
dotenv = "0.15"

# HTTP client for price feeds
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
